<resources>
    <string name="app_name">Player Tracker</string>
    <string name="char_name">Character Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="char_class">Character Class</string>
    <string name="exp_points">Experience</string>
    <string name="change_gold">+/-</string>
    <string name="gold_count">Gold Count</string>
    <string name="battle_goals">Checkmarks</string>
    <string name="change_checkmarks">+/-</string>
    <string name="retired_chars">Retired Characters</string>
    <string name="level">Level</string>
    <string name="fab_content_desc">Add Item</string>
    <string name="ability_name">Ability Name </string>
    <string name="ability_initiative">Initiative </string>
    <string name="ability_level">Ability Level </string>
    <string name="perk_count">Available perks</string>
    <string name="change_value">+/-</string>
    <string name="add_item_text">Enter item reference number</string>
    <string name="change_gold_text">Enter Gold Value</string>
    <string name="change_experience_text">Enter Experience Points</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="confirm_dialog">Confirm</string>
    <string name="enter_char_name">Character Name</string>
    <string name="enter_char_level">Character Starting Level</string>
    <string name="choose_character_class">Character Class</string>
    <string name="starting_gold">Starting gold</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="cards_in_deck">Cards in Deck</string>
    <string name="experience_text">%d</string>
    
    <string-array name="character_classes">
        <item>Brute</item>
        <item>Cragheart</item>
        <item>Mindthief</item>
        <item>Scoundrel</item>
        <item>Spellweaver</item>
        <item>Tinkerer</item>
    </string-array>
</resources>