<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/abilityCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/abilityImage"
            android:layout_width="44dp"
            android:layout_height="89dp"
            android:importantForAccessibility="no" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_marginStart="8dp">

            <TextView
                android:id="@+id/ability_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ability_name"/>

            <TextView
                android:id="@+id/initiative_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/ability_initiative"/>

            <TextView
                android:id="@+id/card_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/ability_level"/>

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>