<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PlayerStatFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/charNameTextField"
                android:layout_width="245dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/char_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:enabled="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/classNameTextField"
                android:layout_width="245dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/char_class"
                app:layout_constraintTop_toBottomOf="@id/charNameTextField">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:enabled="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@id/classNameTextField"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/experience"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/exp_points">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:enabled="false" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/level"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:hint="@string/level"
                    app:layout_constraintStart_toEndOf="@+id/experience">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/goldCountTextField"
                    android:layout_width="126dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/gold_count"
                    app:layout_constraintTop_toBottomOf="@+id/experience">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="245dp"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:enabled="false"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/changeGoldButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/change_gold"
                    app:layout_constraintStart_toEndOf="@+id/goldCountTextField"/>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/battleGoalsCountTextField"
                android:layout_width="245dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/battle_goals"
                app:layout_constraintTop_toBottomOf="@id/goldCountTextField">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:enabled="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/retiredCharctersTextField"
                android:layout_width="245dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/retired_chars"
                app:layout_constraintTop_toBottomOf="@id/battleGoalsCountTextField">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:enabled="false"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <!-- Potential Scroll View for Retired Characters List-->


        </LinearLayout>

    </ScrollView>

</layout>